--- a/site-bob/indexCSS.css
+++ b/site-bob/indexCSS.css
@@ -1,37 +1,129 @@
-/* Estilos para a header */
-header {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: space-between; /* Alinha os itens ao máximo da header */
-    align-items: center; /* Alinha os itens verticalmente no centro */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-    /* Você não precisa definir a altura da header */
-    & .logo img {
-        width: 50px; /* Ajuste o tamanho conforme necessário */
-        height: auto; /* Mantém a proporção da imagem */
-        margin-left:100%; /* Espaço entre a logo e os links de navegação */
+:root{
+    --color-white: #fff;
+    --color-dark1: rgb(39, 39, 39);
+    --color-dark2: #2d2d2d;
+    --color-dark3: #414141;
+    --color-dark4: #1c1c1c;
+    --color-dark5: #343434;
+    --color-greenyellow:  greenyellow;
+}
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    font-family: 'Poppins';
+    background-color: var(--color-dark1);
+    color: var(--color-white);
+}
+.logo_header{
+    width: 45px;
+    margin-left: 50px;
+    
+}
+.header,
+.navigation_header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.header{
+    background-color: var(--color-dark2);
+    justify-content: space-between;
+    padding: 0 10%;
+    height: 3.5em;
+    box-shadow: 1px 1px 4px var(--color-dark4);
+}
+.navigation_header{
+    gap: 3em;
+    z-index: 2;
+}
+.content{
+    padding-top: 5em;
+    text-align: center;
+    height: 100vh;
+    transition: 1s;
+}
+.navigation_header a{
+    text-decoration: none;
+    color: var(--color-greenyellow);
+    transition: 1s;
+    font-weight: bold;
+}
+.navigation_header a:hover{
+    color: var(--color-white);
+}
+.active{
+    background: var(--color-dark3);
+    padding: 10px;
+    border-radius: 10px;
+}
+.btn_icon_header{
+    background: transparent;
+    border: none;
+    color: var(--color-white);
+    cursor: pointer;
+    display: none;
+}
+@media screen and (max-width: 768px) {
+    .navigation_header{
+        position: absolute;
+        flex-direction: column !important;
+        top: 0;
+        background: var(--color-dark5);
+        height: 100%;
+        width: 35vw;
+        padding: 1em;
+        animation-duration: 1s;
+        margin-left: -100vw;
+    }
+    .btn_icon_header{
+        display: block;
     }
 }
-
-nav ul {
-    list-style-type: none;
-    display: flex; /* Alinha os itens da lista horizontalmente */
+@keyframes showSidebar {
+    from {margin-left: -100vw;}
+    to {margin-left: -10vw;}
 }
 
-nav ul li {
-    margin-right: 20px;
+.login{
+color: var(--color-greenyellow);
+cursor: pointer;
+
 }
 
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-}
+.cadastro{
+    color: var(--color-greenyellow);
+    cursor: pointer;
+   margin-left: 8px;
+    } 
+    .entrada{
+        display: flex;
+        margin-right: 200px;
+    }
 
-nav ul li a:hover {
-    text-decoration: underline;
-}
+    .siteSobre{
+display: flex;
+justify-content: center;
 
+    }
+
+    .introducao  {
+        display: flex;
+        margin-top: 150px;
+    }
+    
+    .imgSobre{
+        width: 300px;
+        height: auto;
+        margin-top: 200px;
+        padding: 0px 0px 0px 30px ;
+    }
+
+    .textoSobre{
+display: flex;
+margin-top: 200px;
+padding: 0px 70px 0px 0px ;
+    }
