--- a/site-bob/cadastroCSS.css
+++ b/site-bob/cadastroCSS.css
@@ -1,18 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .imgs{
     display: flex;
 }
 body {
-    box-sizing: border-box;
+     box-sizing: border-box;
    font-family:'Poppins';
    font-size: 14px;
     flex-direction: column;
-    background-image: url(assets/Group\ 1.png);
-    width: 99%;
-    height: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-
+    overflow-y: hidden;
+    
    & .logo{
        display: flex;
       margin-left: 96% ;
@@ -23,7 +20,15 @@ body {
        
     }
 }
-
+.container{
+    background-image: url(assets/quiz.png);
+    width: 99%;
+    /* height: 99%; */
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center; 
+ 
+}
 .seta{
    display: flex;
    width: 10px;
@@ -49,8 +54,8 @@ body {
     background: linear-gradient(to bottom,#000,  #122203   );
     border-radius: 10px;
     display: flex;
-
-margin-right: 800px;
+margin-left: 70px;
+/* margin-right: 800px; */
     margin-bottom: 150px;
     flex-direction: column;
     align-items: center;
@@ -94,7 +99,7 @@ button{
     width: 200px;
     margin-bottom: 5px;
     font-size: 15px;
-    /* border:3px solid white; */
+ 
     border-radius: 5px;
     font-weight: bold;
 }
