--- a/site-bob/loginCSS.css
+++ b/site-bob/loginCSS.css
@@ -4,24 +4,31 @@
 }
 body {
     box-sizing: border-box;
-   font-family:'Poppins';;
-   font-size: 14px;
-    flex-direction: column;
-    background-image: url(assets/Group\ 1.png);
-    width: 99%;
-    height: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
+    font-family:'Poppins';
+    font-size: 14px;
+     flex-direction: column;
+     overflow-y: hidden;
+     
 
-   & .logo{
-       display: flex;
-      margin-left: 96% ;
-       width: 50px;
-       height: 50px;
-       
-       
-       
     }
+    .container{
+        background-image: url(assets/quiz.png);
+        width: 99%;
+        /* height: 99%; */
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center; 
+        
+        .logo{
+            display: flex;
+           margin-left: 96% ;
+            width: 50px;
+            height: 50px;
+            /* margin-bottom: 100px; */
+            
+            
+            
+         }
 }
 
 .seta{
@@ -48,13 +55,13 @@ body {
     height: 400px;
     background: linear-gradient(to bottom,#030b00,  #122203   );
     border-radius: 10px;
-    display: flex;
-    /* border: 2px solid white; */
-margin-right: 800px;
-    margin-top: 10px;
+    display: flex;  
+    /* margin-left: 150px; */
+    margin-top: 50px;
+    margin-bottom: 100px;
     flex-direction: column;
     align-items: center;
-    padding:   0px 0px 10px 0px;
+    /* padding:   0px 0px 10px 0px; */
 }
 h2{
     color: white;
@@ -75,7 +82,7 @@ input{
     margin-bottom: 10px;
 
     border-radius: 5px;
-    /* border: 3px solid greenyellow; */
+   
 }
 .inpt_total{
     
@@ -94,7 +101,6 @@ button{
     width: 200px;
     margin-top: 20px;
     font-size: 15px;
-    /* border:3px solid white; */
     border-radius: 5px;
     font-weight: bold;
 }
