--- a/site-bob/biografiaCSS.css
+++ b/site-bob/biografiaCSS.css
@@ -1,45 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-:root{
+:root {
     --color-white: #fff;
     --color-dark1: rgb(39, 39, 39);
     --color-dark2: #2d2d2d;
     --color-dark3: #414141;
     --color-dark4: #1c1c1c;
     --color-dark5: #343434;
-    --color-greenyellow:  greenyellow;
+    --color-greenyellow: greenyellow;
 }
-*{
+
+* {
     margin: 0;
     padding: 0;
 }
-body{
+
+body {
     font-family: 'Poppins';
     background-color: var(--color-dark1);
     color: var(--color-white);
     z-index: 1;
-}
-.logo_header{
-    width: 48px;
-    margin-right: 73px;
-    border-radius: 50%;
-    
-    
+    overflow-x: hidden;
 }
 
-h3{
-    display: flex;
-    align-items: start;
-    padding: 10px;
-    color: var(--color-greenyellow);
+
+.logo_header {
+    width: 110px;
+    margin-right: 13px;
+    margin-top: 20px;
+
+
 }
+
 .header,
-.navigation_header{
+.navigation_header {
     display: flex;
     flex-direction: row;
     align-items: center;
+    font-weight: 200;
 }
-.header{
+
+.header {
     background-color: var(--color-dark2);
     justify-content: space-between;
     padding: 0 10%;
@@ -49,34 +50,46 @@ h3{
     top: 0;
     z-index: 3
 }
-.navigation_header{
+
+.navigation_header {
     gap: 3em;
     z-index: 2;
+    margin-left: 60px;
 }
-.content{
+
+.content {
     padding-top: 5em;
     text-align: center;
     height: 100vh;
     transition: 1s;
 }
-.navigation_header a{
+
+.navigation_header a {
     text-decoration: none;
     color: var(--color-greenyellow);
     transition: 1s;
-   
+
 }
-.navigation_header .biografia{
+.barra a{
+    color: white;
+    margin-right: 5px;
+}
+
+.navigation_header .biografia {
     color: white;
 }
-.navigation_header a:hover{
+
+.navigation_header a:hover {
     color: var(--color-white);
 }
-.active{
+
+.active {
     background: var(--color-dark3);
     padding: 10px;
     border-radius: 10px;
 }
-.btn_icon_header{
+
+.btn_icon_header {
     background: transparent;
     border: none;
     color: var(--color-white);
@@ -84,36 +97,36 @@ h3{
     display: none;
 }
 
-.login{
+.login {
     color: var(--color-greenyellow);
     cursor: pointer;
     transition: 1s;
-    margin-left: 17px;
+    margin-left: 95px;
+    margin-right: 10px;
 
-    
+
 }
-.login:hover{
+
+.login:hover {
     color: var(--color-white);
 }
-.cadastro{
+
+.cadastro {
     color: var(--color-greenyellow);
     cursor: pointer;
     margin-left: 8px;
     transition: 1s;
- 
-} 
-.cadastro:hover{
-color: var(--color-white);
+
 }
-.entrada{
-        display: flex;
-        margin-right: 300px;
-   
-   
-   
-   
-   
-    }
+
+.cadastro:hover {
+    color: var(--color-white);
+}
+
+.entrada {
+    display: flex;
+    margin-right: 168px;
+}
 h1{
     color: var(--color-greenyellow);
     margin-top: 50px;
@@ -130,6 +143,7 @@ h1{
 }
 .inicio h3{
     margin-bottom: 4px;
+    color: var(--color-greenyellow);
 }
 .coluna1 {
     display: flex;
@@ -141,7 +155,9 @@ h1{
 
 
 
-
+h3{
+    color: var(--color-greenyellow);
+}
 .coluna2 {
     display: flex;
     flex-direction: column;
@@ -155,8 +171,8 @@ h1{
     width: 500px;
     height: 400px;
     margin-bottom:110px;
-    margin-left: 30px;
-    margin-top: 10px;
+    margin-left: 100px;
+    margin-top: 90px;
     padding: 20px 0px;
 
 }
