--- a/site-bob/loginCSS.css
+++ b/site-bob/loginCSS.css
@@ -84,9 +84,9 @@ h2{
 }
 input{
     background-color: rgba(255, 255, 255, 0.895);
-    width: 200px;
+    width: 280px;
     margin-bottom: 10px;
-
+height: 20px;
     border-radius: 5px;
    
 }
