--- a/Projeto-individual/api/public/biografiaCSS.css
+++ b/Projeto-individual/api/public/biografiaCSS.css
@@ -29,6 +29,22 @@ body {
     
     
 }
+.sair{
+    width: 70px;
+    border-radius: 30px;
+    color: black;
+font-weight: 600;
+cursor: pointer;
+    background-color: rgb(20, 173, 20);
+}
+.sair:hover{
+    transition: 1s;
+    transform: scale(1.2);
+}
+.user{
+    margin-right: 200px;
+    color: var(--color-greenyellow);
+}
 
 .header,
 .navigation_header{
