--- a/Projeto-individual/api/public/quizCSS.css
+++ b/Projeto-individual/api/public/quizCSS.css
@@ -36,6 +36,12 @@ body {
 }
 button {
     cursor: pointer;
+    align-items: center;
+
+}
+.dash{
+color: white;
+    cursor: pointer;
 }
 
 .container {
