--- a/Projeto-individual/api/public/dashboardCSS.css
+++ b/Projeto-individual/api/public/dashboardCSS.css
@@ -103,11 +103,11 @@ text-align: center;
 
 .imgkpi{
     max-width: 50px;
-    margin-top: -100px;
+    margin-top: -150px;
 }
 .imgkpi img{
     width: 100%;
-    margin-left: 340px;
+    margin-left: 390px;
     
 }
 
@@ -169,20 +169,40 @@ color: var(--color-white);
         margin-right: 300px;  
    
     }
+ .qtd{
+    width: 400px;
+    display: flex;
+  
+    margin-bottom: 20px;
+    /* background-color: black; */
+}
+.frase1{
+    margin-left: 70px;
+    
+}
+.frase2{
+margin-left: 130px;
+justify-content: center;
+}
+
 
 .chart{
     width: 300px;
     height: 300px;
+    margin-top: 7px;
+    margin-right: 20px;
 }
 .chart2{
     width: 700px;
     height: 700px;
     margin-left: 150px;
+    margin-top: 7px;
+
 
 }
 .canvas{
     display: flex;
-    margin-top: 250px;
+    margin-top: 200px;
     margin-left: 200px;
     max-width:700px ;
     max-height: 700px;
@@ -198,11 +218,13 @@ color: var(--color-white);
     display: flex;
     max-width: 130px;
     max-height: 130px;
-}
 
-.imgs img{
-    width: 100%;
-    height: 100%;
-    margin-left: 285px;
-    margin-top: -600px;
+     img{
+        width: 80%;
+        height: 80%;
+        margin-left: 305px;
+        margin-top: -540px;
+    }
+
+
 }
