--- a/Projeto-individual/api/public/musicasCSS.css
+++ b/Projeto-individual/api/public/musicasCSS.css
@@ -37,6 +37,8 @@ body {
     align-items: center;
     font-weight: 200;
     margin-right: 20%;
+    font-family: 'Raleway';
+
 }
 .sair{
     width: 70px;
