--- a/Projeto-individual/api/public/biografiaCSS.css
+++ b/Projeto-individual/api/public/biografiaCSS.css
@@ -53,6 +53,8 @@ cursor: pointer;
     align-items: center;
     font-weight: 200;
     margin-right: 20%;
+    font-family: 'Raleway';
+
 }
 .header{
     background-color: var(--color-dark2);
