--- a/Projeto-individual/api/public/indexCSS.css
+++ b/Projeto-individual/api/public/indexCSS.css
@@ -40,6 +40,7 @@ body {
     align-items: center;
     font-weight: 200;
     margin-right: 20%;
+    font-family: 'Raleway';
 }
 .header{
     background-color: var(--color-dark2);
