--- a/Projeto-individual/api/public/paisesCSS.css
+++ b/Projeto-individual/api/public/paisesCSS.css
@@ -37,7 +37,7 @@ body {
     align-items: center;
     font-weight: 200;
     margin-right: 20%;
-    font-family: 'Raleway';
+    font-family: 'Poppins';
 
 }
 
